fix not centered

--- a/src/pages/Home/components/HomeSupportedPaymentSection/HomeSupportedPayment.module.scss
+++ b/src/pages/Home/components/HomeSupportedPaymentSection/HomeSupportedPayment.module.scss
@@ -12,7 +12,6 @@
         border-radius: 20px;
 
         ._Card {
-            width: 100%;
             padding: 25px;
             background-color: rgba($color: v.$black, $alpha: 0.1);
             box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15);
